src/site/deception.css
.doctrines {
  li {
    margin-bottom: 0.5rem;

    /* bullet points */
    list-style: none;

    &:before {
      content: '';
      display: inline-block;
      margin-right: 0.5rem;
      top: 2px;
      position: relative;
      height: 1rem;
      width: 1rem;
    }
  }

  .doctrine {
    div+div {
      margin-top: 1rem;
    }

    span+span {
      margin-left: 0.3rem;
    }
  }

  .errors {
    display: inline-block;

    li {
      display: inline;
      margin-left: 0.5rem;
    }
  }

  .errors li,
  .other li {
    &:before {
      background: url('asset/symbol/red_x.svg');
    }
  }

  .errors li,
  .refutation li {
    &:after {
      content: '.';
    }
  }

  /* nested list e.g. Calvinism */
  .other ul {
    padding-inline-start: 1rem;

    li {
      &:first-child {
        margin-top: 0.5rem;
      }
    }
  }

  .refutation li {
    /* make every li a tooltip anchor */
    position: relative;

    &:before {
      background: url('asset/emoji/checkmark_box.svg');
      filter: hue-rotate(00deg) brightness(72%) contrast(500%);
    }

    &:last-child {
      margin-bottom: 0;
    }

    mark+span,
    span+.verse {
      margin-left: 0.3rem;
    }

    .verse {
      /* fix android chrome */
      display: inline;

      span.body {
        background: #322;
        color: #ff8;
      }

      em {
        color: #ff8;
        text-decoration: underline;
      }
    }
  }
}

